# libchai-snow

./: .gitignore  Cargo.toml  Makefile  README.md
legacy/: bayesian.rs  env.rs  first_order.rs
scripts/: bayesian.sh  package-lock.json  package.json  tsconfig.json  处理陆标繁体.ts  替换火焰图.ts  生成大竹码表.ts  生成测评码表.ts  解析繁体字频.ts
src/: common.rs  dual.rs  lib.rs  main.rs  snow2encoder.rs  snow2objective.rs  snow2operators.rs  snow4operators.rs  tree.rs
src/common/: dual.rs  mod.rs  tree.rs
src/feihua/: encoder.rs  mod.rs  objective.rs  operators.rs
src/qingyun/: context.rs  encoder.rs  mod.rs  objective.rs  operators.rs
src/snow2/: encoder.rs  mod.rs  objective.rs  operators.rs  snow2encoder.rs  snow2objective.rs  snow2operators.rs
src/snow4/: mod.rs  snow4operators.rs
tests/: check_threads.rs
