[package]
name = "snow"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true
lto = "thin"
codegen-units = 1

[dependencies]
chrono = "0.4.41"
clap = "4.5.32"
indexmap = "2.10.0"
itertools = "0.14.0"
libchai = { version = "0.3.0", path = "../libchai" }
num_cpus = "1.16.0"
once_cell = "1.21.3"
rand = "0.8.5"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_yaml = "0.9.34"
unicode-width = "0.2.1"

[dev-dependencies]
criterion = "0.7.0"
