[package]
name = "snow"
version = "0.1.0"
edition = "2024"
default-run = "snow2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
overflow-checks = false
panic = "abort"

[profile.bench]
opt-level = 3
debug = true
lto = "thin"
codegen-units = 1
overflow-checks = false

[dependencies]
chrono = "0.4.41"
clap = "4.5.32"
csv = "1.4.0"
indexmap = "2.10.0"
itertools = "0.14.0"
libchai = { version = "0.3.0-beta.1", path = "../libchai" }
num_cpus = "1.16.0"
rand = "0.9"
regex = "1.12.2"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_yaml = "0.9.34"
unicode-width = "0.2.1"

[dev-dependencies]
criterion = "0.7.0"
